Work Tiles Restructure

--- a/index.html
+++ b/index.html
@@ -75,13 +75,13 @@
           </div>
 
           <div class="meta">
+            <h3>Augmented Reality Pokemon Cards</h3>
+            <p>I made custom augmented reality Pokemon cards that can battle!</p>
             <div class="chips">
               <span class="chip">Unity</span>
               <span class="chip">C#</span>
               <span class="chip">AR Foundation</span>
             </div>
-            <h3>Augmented Reality Pokemon Cards</h3>
-            <p>I made custom augmented reality Pokemon cards that can battle!</p>
           </div>
         </article>
 
@@ -91,31 +91,14 @@
           </div>
 
           <div class="meta">
-            <div class="chips">
-              <span class="chip">Unity</span>
-              <span class="chip">C#</span>
-              <span class="chip">Meta SDKs</span>
-              <span class="chip">Meta Quest Store</span>
-            </div>
-            <h3>Break Room</h3>
-            <p>A physical playroom where you can break glass objects in AR and VR.</p>
-          </div>
-        </article>
-
-        <article class="card project">
-          <div class="media">
-            <div class="mediaPlaceholder">Media</div>
-          </div>
-
-          <div class="meta">
+            <h3>Familiars</h3>
+            <p>An iOS Tamagochi-like game where AR animals are projected onto your wrist.</p>
             <div class="chips">
               <span class="chip">Unity</span>
               <span class="chip">C#</span>
               <span class="chip">AR Foundation</span>
               <span class="chip">iOS Store</span>
             </div>
-            <h3>Familiars</h3>
-            <p>An iOS Tamagochi-like game where AR animals are projected onto your wrist.</p>
           </div>
         </article>
 
@@ -125,14 +108,31 @@
           </div>
 
           <div class="meta">
+            <h3>Break Room</h3>
+            <p>A physical playroom where you can break glass objects in AR and VR.</p>
+            <div class="chips">
+              <span class="chip">Unity</span>
+              <span class="chip">C#</span>
+              <span class="chip">Meta SDKs</span>
+              <span class="chip">Meta Quest Store</span>
+            </div>
+          </div>
+        </article>
+
+        <article class="card project">
+          <div class="media">
+            <div class="mediaPlaceholder">Media</div>
+          </div>
+
+          <div class="meta">
+            <h3>Surface Changer</h3>
+            <p>Quest 3 app (unpublished) where you can change the material of any surface.</p>
             <div class="chips">
               <span class="chip">Unity</span>
               <span class="chip">C#</span>
               <span class="chip">XR Interaction Toolkit</span>
               <span class="chip">URP Shaders</span>
             </div>
-            <h3>Surface Changer</h3>
-            <p>Quest 3 app (unpublished) where you can change the material of any surface.</p>
           </div>
         </article>
 
@@ -142,12 +142,12 @@
           </div>
 
           <div class="meta">
-            <div class="chips">
-              <span class="chip">Category</span>
-              <span class="chip">Tools / Stack</span>
-            </div>
             <h3>3D Printed Augmented Reality Outdoor Headsets</h3>
             <p>Custom open-source headsets w/ hand tracking built to work outdoors. 1st place engineering captstone award!</p>
+            <div class="chips">
+              <span class="chip">Category</span>
+              <span class="chip">Tools / Stack</span>
+            </div>
           </div>
         </article>
 
@@ -157,17 +157,64 @@
           </div>
 
           <div class="meta">
+            <h3>I've also made 8+ smaller games!</h3>
+            <p>Most of which are available to see on my itch.io</p>
             <div class="chips">
               <span class="chip">Category</span>
               <span class="chip">Tools / Stack</span>
             </div>
-            <h3>I've also made 8+ smaller games!</h3>
-            <p>Most of which are available to see on my itch.io</p>
           </div>
         </article>
 
       </div>
 
+    </section>
+
+    <section class="writing-section">
+      <h2 class="taglines">Writing, Talks, and Media</h2>
+      <div class="projects-grid">
+        <article class="card project">
+          <div class="media">
+            <div class="mediaPlaceholder">Media</div>
+          </div>
+          <div class="meta">
+            <h3>Article Title Placeholder</h3>
+            <p>Short description coming soon.</p>
+            <div class="chips">
+              <span class="chip">Article</span>
+              <span class="chip">Draft</span>
+            </div>
+          </div>
+        </article>
+
+        <article class="card project">
+          <div class="media">
+            <div class="mediaPlaceholder">Media</div>
+          </div>
+          <div class="meta">
+            <h3>Talk Title Placeholder</h3>
+            <p>Short description coming soon.</p>
+            <div class="chips">
+              <span class="chip">Talk</span>
+              <span class="chip">Video</span>
+            </div>
+          </div>
+        </article>
+
+        <article class="card project">
+          <div class="media">
+            <div class="mediaPlaceholder">Media</div>
+          </div>
+          <div class="meta">
+            <h3>Media Placeholder</h3>
+            <p>Short description coming soon.</p>
+            <div class="chips">
+              <span class="chip">Podcast</span>
+              <span class="chip">Article</span>
+            </div>
+          </div>
+        </article>
+      </div>
     </section>
 
     <section class="professional-section">
@@ -221,15 +268,6 @@
           </div>
         </article>
 
-      </div>
-    </section>
-
-    <section class="writing-section">
-      <h2 class="taglines">Writing, Talks, and Media</h2>
-      <div class="card">
-        <div class="meta">
-          <p>Links to articles, recorded talks, and media appearances. <em>Content coming soon</em>.</p>
-        </div>
       </div>
     </section>
 
