Work Section Updated with more details

--- a/index.html
+++ b/index.html
@@ -227,10 +227,12 @@
           <div class="meta professional-meta">
             <h3>Gaming & AI Engineer</h3>
             <p>HP Inc. (Contract) , August 2024 – Present</p>
-
-            <p>
-              <br>Built AI-driven interactive demos in Unity for HP OMEN hardware showcases (For example: Offline LLM-powered NPCs in Unity) while coordinating software and hardware features based on user feedback.
-            </p>
+            <ul class="professional-bullets">
+              <li>Prototyped AI demos in Unity for hardware showcases, including LLM-powered NPCs running offline</li>
+              <li>Monitored and triaged 2,000+ social media posts per month to identify user pain points, guide feature development, and coordinate software and hardware fixes with rapid turnaround times</li>
+              <li>Produced a monthly livestream tech showcase, reaching 1.7M+ followers and highlighting new products</li>
+              <li>Scouted and partnered with 6+ external vendors to build and integrate AI experiences into HP’s ecosystem</li>
+            </ul>
           </div>
         </article>
 
@@ -239,10 +241,30 @@
           <div class="meta professional-meta">
             <h3>Unity Game Developer</h3>
             <p>Independent Game Development, October 2021 – August 2024</p>
-            <br>
-            <p>
-              Designed, developed, and shipped novel Unity games and AR/VR prototypes for iOS and Meta Quest, reaching hundreds of thousands of viewers through gameplay demos and devlogs.
-            </p>
+            <ul class="professional-bullets">
+              <li>Independently designed, developed, and shipped 3 original games, with releases on iOS and Meta Quest 3</li>
+              <li>Produced gameplay and interaction demos and devlogs reaching 500,000+ views across YouTube and TikTok</li>
+              <li class="with-logo">
+                <img class="unity-logo" src="assets/UnityLogo.png" alt="Unity logo">
+                <div class="game-text"><strong>Break Room</strong> • Unity (C#) • Meta Quest 3 • Meta Quest store • Demo
+                  <p class="subtext">VR physics sandbox featuring realistic object destruction and spatial interactions</p>
+                </div>
+              </li>
+
+              <li class="with-logo">
+                <img class="unity-logo" src="assets/UnityLogo.png" alt="Unity logo">
+                <div class="game-text"><strong>Familiars: AR Animal Companions</strong> • Unity (C#) • iOS &amp; Apple Watch • iOS app store • Demo
+                  <p class="subtext">Tamagotchi-like game projecting animated pets onto an Apple Watch face, with collectible AR animal cards</p>
+                </div>
+              </li>
+
+              <li class="with-logo">
+                <img class="unity-logo" src="assets/UnityLogo.png" alt="Unity logo">
+                <div class="game-text"><strong>Augmented Reality Pokémon Card Battles (Tech Demo)</strong> • Unity (C#) • Social Media • Demo
+                  <p class="subtext">Fan-made card game featuring 9 animated models, real-time lighting, and interactive battle mechanics</p>
+                </div>
+              </li>
+            </ul>
           </div>
         </article>
 
@@ -251,9 +273,11 @@
           <div class="meta professional-meta">
             <h3>Program Manager</h3>
             <p>Microsoft, September 2019 - May 2021</p>
-            <br>
-            <p> Owned customer-facing Azure billing and payment experiences end-to-end, shipping high-impact features used by millions of cloud customers and significantly reducing support ticket volume.
-            </p>
+             <ul class="professional-bullets">
+              <li>Led Azure’s payment method product area end-to-end: planning, scoping, tracking, and launching 3+ cloud features per month in collaboration with business, UX, legal, support, and engineering teams</li>
+              <li>Designed and validated Azure features through user research and A/B testing, shipping to millions of users</li>
+              <li>Shipped Azure payment features that eliminated 1,500+ monthly support cases, saving $1.6M and 28,800 support hours per month</li>
+            </ul>
           </div>
         </article>
 
@@ -262,9 +286,9 @@
           <div class="meta professional-meta">
             <h3>Program Manager Intern</h3>
             <p>Microsoft, Summer 2018</p>
-            <br>
-            <p> Helped modernize Azure promo code and cloud plan systems used to deliver customer savings across multiple subscription offerings.
-            </p>
+            <ul class="professional-bullets">
+              <li>Collaborated on Azure’s promo code and cloud plan modernization, coordinating cross-functional teams to develop a system supporting millions of dollars in customer savings and 50+ cloud subscription plans</li>
+            </ul>
           </div>
         </article>
 
