--- a/index.html
+++ b/index.html
@@ -244,21 +244,21 @@
             <ul class="professional-bullets">
               <li>Independently designed, developed, and shipped 3 original games, with releases on iOS and Meta Quest 3</li>
               <li>Produced gameplay and interaction demos and devlogs reaching 500,000+ views across YouTube and TikTok</li>
-              <li class="with-logo">
+              <br><li class="with-logo">
                 <img class="unity-logo" src="assets/UnityLogo.png" alt="Unity logo">
                 <div class="game-text"><strong>Break Room</strong> • Unity (C#) • Meta Quest 3 • Meta Quest store • Demo
                   <p class="subtext">VR physics sandbox featuring realistic object destruction and spatial interactions</p>
                 </div>
               </li>
 
-              <li class="with-logo">
+              <br><li class="with-logo">
                 <img class="unity-logo" src="assets/UnityLogo.png" alt="Unity logo">
                 <div class="game-text"><strong>Familiars: AR Animal Companions</strong> • Unity (C#) • iOS &amp; Apple Watch • iOS app store • Demo
                   <p class="subtext">Tamagotchi-like game projecting animated pets onto an Apple Watch face, with collectible AR animal cards</p>
                 </div>
               </li>
 
-              <li class="with-logo">
+              <br><li class="with-logo">
                 <img class="unity-logo" src="assets/UnityLogo.png" alt="Unity logo">
                 <div class="game-text"><strong>Augmented Reality Pokémon Card Battles (Tech Demo)</strong> • Unity (C#) • Social Media • Demo
                   <p class="subtext">Fan-made card game featuring 9 animated models, real-time lighting, and interactive battle mechanics</p>
@@ -297,20 +297,38 @@
 
     <section>
       <h2 id="skills-heading">Skills</h2>
-      <ul id="skills-list" class="skills">
-        <li>Skill</li>
-        <li>Skill</li>
-        <li>Skill</li>
-        <li>Tool</li>
-        <li>Technology</li>
+      <ul class="skills skills-full">
+        <li>C#</li>
+        <li>Python</li>
+        <li>Git/Version Control</li>
+        <li>Visual Studio</li>
+        <li>Blender</li>
+        <li>DaVinci Resolve</li>
+        <li>Unity (6 years)</li>
+        <li>ARKit</li>
+        <li>ARFoundation</li>
+        <li>Oculus/Quest SDKs</li>
+        <li>Shader Graph</li>
+        <li>3D modeling</li>
+        <li>3D texturing</li>
+        <li>Agile</li>
+        <li>Scrum</li>
+        <li>Waterfall</li>
+        <li>OKRs</li>
+        <li>KPIs</li>
+        <li>Feature &amp; roadmap ownership</li>
+        <li>Stakeholder management</li>
+        <li>Technical storytelling</li>
+        <li>Product marketing</li>
+        <li>Experienced presenter</li>
       </ul>
-    </section>
+    </section> 
 
     <section>
       <h2 id="about-heading">About</h2>
       <div class="card">
         <p id="about-text">
-          Short neutral bio. Who this portfolio is for and what kind of work it showcases.
+          Hi I'm Justin :)
         </p>
       </div>
     </section>
