Header Spacing Fix

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
       <div class="tagline">
         <h1 class="greeting">Hi, I'm Justin!</h1>
         <p class="showreel-text" id="showreel-text">
-          <br>I build and share new kinds of interactive experiences.
+          I build and share new kinds of interactive experiences.
         </p>
       </div>
     </section>
