Brand box scaling fix

--- a/index.html
+++ b/index.html
@@ -43,14 +43,14 @@
       </video>
       <div class="tagline">
         <h1 class="greeting">Hi, I'm Justin!</h1>
-        <p class="showreel-text" id="showreel-text">
+        <p class="showreel-text">
           I build and share new kinds of interactive experiences.
         </p>
       </div>
     </section>
 
     <section>
-      <h2 id="brands-heading" class="taglines">Previously employed by...</h2>
+      <p class="taglines">Previously employed by...</p>
       <div class="card brands">
         <div class="brands-grid">
 
@@ -67,7 +67,7 @@
       </div>
 
     <section>
-      <h2 id="experiences-heading" class="taglines">Shipped Work</h2>
+      <p class="taglines">Shipped Work</p>
       <div class="projects-grid">
         <article class="card project">
           <div class="media">
@@ -171,7 +171,7 @@
     </section>
 
     <section class="writing-section">
-      <h2 class="taglines">Writing, Talks, and Media</h2>
+      <p class="taglines">Writing, Talks, and Media</p>
       <div class="projects-grid">
         <article class="card project">
           <div class="media">
@@ -218,7 +218,7 @@
     </section>
 
     <section class="professional-section">
-      <h2 class="taglines">Professional Experience</h2>
+      <p class="taglines">Professional Experience</p>
       <p class="sub_taglines">More details can be found on my resume</p>
       <div class="professional-grid">
 
