Project content setup to fill in!

--- a/index.html
+++ b/index.html
@@ -70,30 +70,14 @@
       <p class="taglines">Shipped Work</p>
       <div class="projects-grid">
         <article class="card project">
-          <div class="media">
-            <div class="mediaPlaceholder">Media</div>
+          <div class="media" id="familiars-media">
+            <img src="assets/Project-GIFs/Familiars.gif" alt="Familiars Demo">
           </div>
 
           <div class="meta">
-            <h3>Augmented Reality Pokemon Cards</h3>
-            <p>I made custom augmented reality Pokemon cards that can battle!</p>
-            <div class="chips">
-              <span class="chip">Unity</span>
-              <span class="chip">C#</span>
-              <span class="chip">AR Foundation</span>
-            </div>
-          </div>
-        </article>
-
-        <article class="card project">
-          <div class="media">
-            <div class="mediaPlaceholder">Media</div>
-          </div>
-
-          <div class="meta">
-            <h3>Familiars</h3>
-            <p>An iOS Tamagochi-like game where AR animals are projected onto your wrist.</p>
-            <div class="chips">
+            <h3>Published an iOS app: <em>Familiars</em></h3>
+            <p>First of its kind technology, I utilize the Apple Watch to display AR images. Using you iPhone, you can then see augmented reality animals projected onto the watch. I also made trading cards if you don’t have an apple watch! I’ve presented this material to various developer audiences.</p>  
+            <p><br><a href="https://apps.apple.com/us/app/familiars/id6471534581" target="_blank" rel="noopener noreferrer">iOS App Store Link</a></p>            <div class="chips">
               <span class="chip">Unity</span>
               <span class="chip">C#</span>
               <span class="chip">AR Foundation</span>
@@ -103,8 +87,8 @@
         </article>
 
         <article class="card project">
-          <div class="media">
-            <div class="mediaPlaceholder">Media</div>
+          <div class="media" id="breakroom-media">
+            <img src="assets/Project-GIFs/Pokemon.gif" alt="Break Room Demo">
           </div>
 
           <div class="meta">
@@ -120,8 +104,24 @@
         </article>
 
         <article class="card project">
-          <div class="media">
-            <div class="mediaPlaceholder">Media</div>
+          <div class="media" id="pokemon-media">
+            <img src="assets/Project-GIFs/Pokemon.gif" alt="AR Pokemon Cards Demo">
+          </div>
+
+          <div class="meta">
+            <h3>Augmented Reality Pokemon Cards</h3>
+            <p>I made custom augmented reality Pokemon cards that can battle!</p>
+            <div class="chips">
+              <span class="chip">Unity</span>
+              <span class="chip">C#</span>
+              <span class="chip">AR Foundation</span>
+            </div>
+          </div>
+        </article>
+
+        <article class="card project">
+          <div class="media" id="surface-changer-media">
+            <img src="assets/Project-GIFs/short pokemon gif.gif" alt="Surface Changer Demo">
           </div>
 
           <div class="meta">
@@ -137,8 +137,8 @@
         </article>
 
         <article class="card project">
-          <div class="media">
-            <div class="mediaPlaceholder">Media</div>
+          <div class="media" id="headsets-media">
+            <img src="assets/Project-GIFs/short pokemon gif.gif" alt="3D Printed AR Headsets Demo">
           </div>
 
           <div class="meta">
@@ -152,8 +152,8 @@
         </article>
 
         <article class="card project">
-          <div class="media">
-            <div class="mediaPlaceholder">Media</div>
+          <div class="media" id="smaller-games-media">
+            <img src="assets/Project-GIFs/short pokemon gif.gif" alt="Smaller Games Demo">
           </div>
 
           <div class="meta">
