Added a global site scale

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 </head>
 <body>
 
+  <div class="site-scale">
+
   <header class="wrap header">
     <div class="brand">
       <img class="header-avatar" src="assets/profile.JPEG" alt="Profile picture">
@@ -76,8 +78,8 @@
 
           <div class="meta">
             <h3>Published an iOS app: <em>Familiars</em></h3>
-            <p>First of its kind technology, I utilize the Apple Watch to display AR images. Using you iPhone, you can then see augmented reality animals projected onto the watch. I also made trading cards if you don’t have an apple watch! I’ve presented this material to various developer audiences.</p>  
-            <p><br><a href="https://apps.apple.com/us/app/familiars/id6471534581" target="_blank" rel="noopener noreferrer">iOS App Store Link</a></p>            <div class="chips">
+            <p>I came up with the idea to use an Apple Watch to display trackable AR images. Using an iPhone, you then can see augmented reality animals projected onto your watch. I also made trading cards if you don’t have an Apple Watch! I’ve presented this project to various developer audiences.</p>  
+            <p><br><a href="https://apps.apple.com/us/app/familiars/id6471534581" target="_blank" rel="noopener noreferrer">iOS App Store Link</a></p><br>            <div class="chips">
               <span class="chip">Unity</span>
               <span class="chip">C#</span>
               <span class="chip">AR Foundation</span>
@@ -337,6 +339,8 @@
   <footer class="wrap footer">
     <small>© <span id="y"></span></small>
   </footer>
+
+  </div>
 
   <script>
     document.getElementById("y").textContent = new Date().getFullYear();
