Better Optimization for mobile

--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
   <main class="wrap">
 
     <section class="showreel">
-      <video class="showreel-gif" autoplay loop muted playsinline aria-label="Showreel">
-        <source src="assets/Showreel2026.mp4" type="video/mp4">
+      <video class="showreel-gif" autoplay loop muted playsinline preload="auto" aria-label="Showreel">
+        <source src="assets/Project-Videos/Highlight_Reel.mp4" type="video/mp4">
         Your browser does not support the video tag.
       </video>
       <div class="tagline">
@@ -90,7 +90,10 @@
 
         <article class="card project">
           <div class="media" id="breakroom-media">
-            <img src="assets/Project-GIFs/Pokemon.gif" alt="Break Room Demo">
+            <video class="showreel-gif" autoplay loop muted playsinline preload="auto" aria-label="Break Room Demo">
+              <source src="assets/Project-Videos/BreakRoom_Reel.mp4" type="video/mp4">
+              Your browser does not support the video tag.
+            </video>
           </div>
 
           <div class="meta">
@@ -107,7 +110,10 @@
 
         <article class="card project">
           <div class="media" id="pokemon-media">
-            <img src="assets/Project-GIFs/Pokemon.gif" alt="AR Pokemon Cards Demo">
+            <video class="showreel-gif" autoplay loop muted playsinline preload="auto" aria-label="AR Pokemon Cards Demo">
+              <source src="assets/Project-Videos/Pokemon_Reel.mp4" type="video/mp4">
+              Your browser does not support the video tag.
+            </video>
           </div>
 
           <div class="meta">
