Formatted Professional Work Section

--- a/index.html
+++ b/index.html
@@ -138,7 +138,9 @@
 
           <div class="meta">
             <h3>Surface Changer</h3>
-            <p>Quest 3 app (unpublished) where you can change the material of any surface.</p>
+            <p>Quest 3 app (unpublished) where you can overlay a virtual texture on any physical surface.
+              <br><br> Undertook to experiment with Meta Hand Tracking APIs and wri7te URP shaders.
+            </p>
             <div class="chips">
               <span class="chip">Unity</span>
               <span class="chip">C#</span>
@@ -231,7 +233,6 @@
 
     <section class="professional-section">
       <p class="taglines">Professional Experience</p>
-      <p class="sub_taglines">More details can be found on my resume</p>
       <div class="professional-grid">
 
         <article class="card professional">
