--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
   <main class="wrap">
 
     <section class="showreel">
-      <video class="showreel-gif" autoplay loop muted playsinline preload="auto" aria-label="Showreel">
+      <video class="showreel-gif" loop muted playsinline preload="metadata" aria-label="Showreel">
         <source src="assets/Project-Videos/Highlight_Reel.mp4" type="video/mp4">
         Your browser does not support the video tag.
       </video>
@@ -90,7 +90,7 @@
 
         <article class="card project">
           <div class="media" id="breakroom-media">
-            <video class="showreel-gif" autoplay loop muted playsinline preload="auto" aria-label="Break Room Demo">
+            <video class="showreel-gif" loop muted playsinline preload="metadata" aria-label="Break Room Demo">
               <source src="assets/Project-Videos/BreakRoom_Reel.mp4" type="video/mp4">
               Your browser does not support the video tag.
             </video>
@@ -112,7 +112,7 @@
 
         <article class="card project">
           <div class="media" id="pokemon-media">
-            <video class="showreel-gif" autoplay loop muted playsinline preload="auto" aria-label="AR Pokemon Cards Demo">
+            <video class="showreel-gif" loop muted playsinline preload="metadata" aria-label="AR Pokemon Cards Demo">
               <source src="assets/Project-Videos/Pokemon_Reel.mp4" type="video/mp4">
               Your browser does not support the video tag.
             </video>
@@ -365,6 +365,32 @@
         el.style.setProperty('--delay', `${i * 0.12}s`);
       });
     })();
+
+    // Play videos only when scrolled into view
+    const videos = document.querySelectorAll('video');
+
+    const observer = new IntersectionObserver(
+      (entries) => {
+        entries.forEach(entry => {
+          const video = entry.target;
+
+          if (entry.isIntersecting) {
+            if (video.paused) {
+              video.play().catch(() => {});
+            }
+          } else {
+            if (!video.paused) {
+              video.pause();
+            }
+          }
+        });
+      },
+      {
+        threshold: 0.3
+      }
+    );
+
+    videos.forEach(video => observer.observe(video));
   </script>
 
 </body>
