Footer text adjustment

--- a/index.html
+++ b/index.html
@@ -369,6 +369,8 @@
           <br><br>
           I really do care a lot about XR. I think this tech will transform the way we as humans interact with the world around us, and I want to help build that future.
           <br><br> Please feel free to reach out to you want to connect!
+          <br>
+          - Justin
         </p>
       </div>
     </section>
