--- a/index.html
+++ b/index.html
@@ -122,8 +122,8 @@
           </div>
 
           <div class="meta">
-            <h3>Augmented Reality Pokemon Cards</h3>
-            <p>I designed and built custom augmented reality Pokemon cards that can battle!
+            <h3>Augmented Reality Pokémon Cards</h3>
+            <p>I designed and built custom augmented reality Pokémon cards that can battle!
               <br><br>Featuring: Multi image tracking support, touch interactions, 9 custom made AR cards, 9 fully animated models, dynamic real-time shadows, unique move sequences, and a fully functional battle mode.</p>
             <p><br><a href="https://www.youtube.com/watch?v=bmlz1rixZWI" target="_blank" rel="noopener noreferrer">Battle Video Demo ></a></p><br>
             <div class="chips">
@@ -209,7 +209,7 @@
           <div class="meta">
             <h3>Over 500,000 views on social media!</h3>
             <p>I make content on Youtube and Tiktok. 
-              Most of my content focuses on AR/VR devlogs, and overcoming the various challanges involved.
+              Most of my content focuses on AR/VR devlogs, and overcoming the various challenges involved.
             </p>
             <div class="chips">
               <span class="chip">Article</span>
@@ -368,7 +368,7 @@
           If you want to know a bit more about me outside of my work, you'll usually find me exploring different creative avenues. Sometimes this looks like taking comedy improv classes, and sometimes it looks like immersing myself reading fantasy stories and playing Dungeons and Dragons. 
           <br><br>
           I really do care a lot about XR. I think this tech will transform the way we as humans interact with the world around us, and I want to help build that future.
-          <br><br> Please feel free to reach out to you want to connect!
+          <br><br> Please feel free to reach out if you would like to connect!
           <br>
           - Justin
         </p>
