--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <img class="header-avatar" src="assets/profile.JPEG" alt="Profile picture">
       <div class="brand-text">
         <h1 id="brand-name">Justin DuPont</h1>
-        <p class="subtitle" id="brand-subtitle">Program Manager / Software Engineer</p>
+        <p class="subtitle" id="brand-subtitle">Interactive Experience Developer</p>
       </div>
     </div>
 
@@ -46,7 +46,7 @@
       <div class="tagline">
         <h1 class="greeting">Hi, I'm Justin!</h1>
         <p class="showreel-text">
-          I build and share new kinds of interactive experiences.
+          I design, build, and share new kinds of interactive experiences.
         </p>
       </div>
     </section>
